# lvgl-cmake-example

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: app_main.cpp
